--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  api:
+    build:
+      context: .              # your project root
+      dockerfile: Dockerfile  # optional if named "Dockerfile"
+    container_name: chaos-api
+    ports:
+      - "1323:8080"
+    environment:
+      - MONGODB_URI=mongodb://root:example@mongo:27017
+    restart: unless-stopped
 
   mongo:
     image: mongo
