--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "1323:8080"
     environment:
       - MONGODB_URI=mongodb://root:example@mongo:27017
+      - DRIVER=mongodb
     restart: unless-stopped
 
   mongo:
